<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:foo="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.payday.kdogruer.view.login.LoginCallback" />

        <variable
            name="controller"
            type="com.payday.kdogruer.view.login.LoginActivityNavigationController" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <com.payday.kdogruer.view.components.CustomUnitFontTextView
            android:id="@+id/customUnitFontTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            foo:customTextFont="fonts/montserrat_bold.otf" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payday_logo"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>
        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customUnitFontTextView6" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@color/white">

                <com.payday.kdogruer.view.components.CustomUnitFontTextView
                    android:id="@+id/customUnitFontTextView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/formTextColor"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    foo:customTextFont="fonts/montserrat_medium.otf" />

                <com.payday.kdogruer.view.components.CustomUnitFontEditText
                    android:id="@+id/et_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/email_hint"
                    android:maxLines="1"
                    android:textColorHint="@color/formTextColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customUnitFontTextView7"
                    foo:customEditTextFont="fonts/montserrat_medium.otf" />

                <com.payday.kdogruer.view.components.CustomUnitFontEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/password_hint"
                    android:maxLines="1"
                    android:textColorHint="@color/formTextColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_mail"
                    foo:customEditTextFont="fonts/montserrat_medium.otf" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_pass" />

                <com.payday.kdogruer.view.components.CustomUnitFontTextView
                    android:id="@+id/login_user_remember_me_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/remind_me"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/cb_remember"
                    app:layout_constraintStart_toEndOf="@+id/cb_remember"
                    app:layout_constraintTop_toTopOf="@+id/cb_remember"
                    foo:customTextFont="fonts/montserrat_medium.otf" />

                <com.payday.kdogruer.view.components.CustomUnitFontTextView
                    android:id="@+id/login_forget_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{() -> controller.navigateToLogin()}"
                    android:text="Forgot Password"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/cb_remember"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/cb_remember"
                    foo:customTextFont="fonts/montserrat_medium.otf" />


                <com.payday.kdogruer.view.components.CustomUnitFontButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_margin_xxx"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_bg"
                    android:gravity="center"
                    android:padding="@dimen/activity_margin_ss"
                    android:text="@string/login"
                    android:onClick="@{() -> callback.onLoginClick()}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_remember"
                    foo:customTextFont="fonts/montserrat_medium.otf" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>